--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>jquery特效制作复选框,全选,反选,取消,购物车，统计价格，统计，淘宝</title>
+<title>jquery特效制作复选框,全选,反选,取消,购物车，统计价格，统计，淘宝ceshi</title>
 
 <link href="css/index.css" rel="stylesheet" type="text/css" />
   
